# ha-mqtt-device-sync

./: .gitignore  README.md  hacs.json  pyproject.toml
.beads/: issues.jsonl  metadata.json
.github/workflows/: hacs.yml  hassfest.yml
announcements/: email-rtl-haos.md  email-tasmota.md  email-zigbee2mqtt.md  ha-forum-announcement.md  ha-forum-post.md  thread-reply-template.md  threads-to-reply.md
custom_components/mqtt_device_sync/: __init__.py  config_flow.py  const.py  manifest.json  strings.json
custom_components/mqtt_device_sync/translations/: it.json
integration_tests/: Dockerfile.test  README.md  docker-compose.yml  run-tests.sh
integration_tests/config/: configuration.yaml
integration_tests/tests/: __init__.py  conftest.py  test_e2e.py
tests/: __init__.py  conftest.py  test_config_flow.py  test_device_updates.py  test_init.py  test_mqtt_sources_compat.py  test_name_parsing.py  test_payload_parsing.py  test_security.py  test_zigbee2mqtt_compat.py
